[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "traffic_cam"
version = "0.1.0"
description = "Компенсация теплового смещения камер уличного видеонаблюдения и трекинг зон"
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "opencv-python>=4.5",
    "numpy>=1.21",
    "pandas>=1.3",
    "matplotlib>=3.4",
    "seaborn>=0.11"
]

[project.scripts]
traffic_cam = "traffic_cam.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]